[package]
name = "ci-queue-playwright"
version = "0.1.0"
edition = "2024"

[dependencies]
ci-queue-core = { path = "../ci-queue-core" }
clap = { version = "4.5.45", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
which = "8.0.0"
